<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".affirmation_ok">

    <TextView
        android:id="@+id/txt_affirmation_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_confirmed"
        android:textColor="@color/primaryDarkColor"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_affirmation_ok"
        android:layout_width="221dp"
        android:layout_height="242dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/img_affirmation_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_affirmation_ok"
        app:srcCompat="@drawable/img_ok" />

    <Button
        android:id="@+id/bt_affirmation_ok"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/bt_affirmation_home"
        android:textStyle="bold"
        app:backgroundTint="@color/primaryDarkColor"
        app:icon="@drawable/ic_add_16dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_affirmation_ok" />
</androidx.constraintlayout.widget.ConstraintLayout>