<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".VerificationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/verificationtopAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:title="@string/verification_app_bar" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txt_verification_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto"
        android:text="@string/verification_info"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/txt_verification_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/verification_warning"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_verification_info" />

    <TextView
        android:id="@+id/txt_supervisor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/verification_supervisor"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txt_verification_info"
        app:layout_constraintTop_toBottomOf="@+id/txt_verification_warning" />

    <TextView
        android:id="@+id/txt_supervisor_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/primaryDarkColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_supervisor"
        app:layout_constraintStart_toEndOf="@+id/txt_supervisor"
        app:layout_constraintTop_toTopOf="@+id/txt_supervisor"
        tools:text="Abdel Aziz Mfossa" />

    <TextView
        android:id="@+id/txt_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/verification_code"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txt_supervisor"
        app:layout_constraintTop_toBottomOf="@+id/txt_supervisor" />

    <TextView
        android:id="@+id/txt_code_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@color/primaryDarkColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_code"
        app:layout_constraintStart_toStartOf="@+id/txt_supervisor_value"
        app:layout_constraintTop_toTopOf="@+id/txt_code"
        tools:text="103" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/verification_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txt_code"
        app:layout_constraintTop_toBottomOf="@+id/txt_code" />

    <TextView
        android:id="@+id/txt_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@color/primaryDarkColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_date"
        app:layout_constraintStart_toStartOf="@+id/txt_code_value"
        app:layout_constraintTop_toTopOf="@+id/txt_date"
        tools:text="05/03/2021" />

    <TextView
        android:id="@+id/txt_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/verification_room"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txt_date"
        app:layout_constraintTop_toBottomOf="@+id/txt_date" />

    <TextView
        android:id="@+id/txt_room_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@color/primaryDarkColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_room"
        app:layout_constraintStart_toStartOf="@+id/txt_date_value"
        app:layout_constraintTop_toTopOf="@+id/txt_room"
        tools:text="NB4" />

    <TextView
        android:id="@+id/txt_time_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/verification_time_range"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txt_room"
        app:layout_constraintTop_toBottomOf="@+id/txt_room" />

    <TextView
        android:id="@+id/txt_time_range_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@color/primaryDarkColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_time_range"
        app:layout_constraintStart_toStartOf="@+id/txt_room_value"
        app:layout_constraintTop_toTopOf="@+id/txt_time_range"
        tools:text="2 pm - 4 pm" />

    <Button
        android:id="@+id/bt_verification_rescan"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/roboto"
        android:text="@string/verification_bt_rescan"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_verification_confirm"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:fontFamily="@font/roboto"
        android:text="@string/verification_bt_confirm"
        android:textStyle="bold"
        app:backgroundTint="@color/primaryDarkColor"
        app:layout_constraintBottom_toBottomOf="@+id/bt_verification_rescan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_verification_rescan" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:fitsSystemWindows="true"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="labeled"
        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>